fix(login): shift welcome column up another 100px (total 200px)
[solo-dev]

--- a/app/globals.css
+++ b/app/globals.css
@@ -2994,7 +2994,7 @@ input[type="reset"] {
   flex-direction: column;
   justify-content: center;
   order: 1;
-  margin-top: -100px;
+  margin-top: -200px;
 }
 
 .login-page__welcome {
